force-app/main/default/objects/RowsColumns__c/RowsColumns__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>RowsColumns</label>
</CustomObject>