force-app/main/default/objects/RowsColumns__c/fields/Max_Columns__c.field-meta.xml
<CustomField>
    <fullName>Max_Columns__c</fullName>
    <label>Max Columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>