force-app/main/default/objects/RowsColumns__c/fields/Max_Rows__c.field-meta.xml
<CustomField>
    <fullName>Max_Rows__c</fullName>
    <label>Max Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>